convert to host byte order when printing stats of received ICMP   packets other than echo-replies; from Dave Huang in PR bin/3876